--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <p id="meaning"></p>
         </div>
     </div>
+       <div class="foot" style="
+    background-color: black;
+    color: white;
+"><h><center>Copyright © Prabhat Yadav⭐|2023|</center></h></div>
     <script>
  let meaning=document.getElementById("meaning");
  let phont=document.getElementById("phont");
